# yandexlyceum-pyqt

./: .gitignore  BookHandler.py  CustomExceptions.py  DatabaseHandler.py  README.md  database.db  func.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: lint_and_types.yml
TestBooks/: Alisa v Stranie chudies - L'iuis Kerroll.fb2  Etyud v bagrovih tonah.epub
UI/: createTag.ui  deleteBook.ui  deleteLinkTag2.ui  deleteTag.ui  linkTag.ui  login.ui  main.ui  readBookForm.ui  readTagForm.ui  register.ui  sorting.ui
UserBooks/test/: Dune 1 book.fb2  Кэролл Льюис. Алиса в стране чудес - royallib.com.fb2
